# delta-gmail-ai-autolabel

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Makefile  README.md  console.py  coverage.xml  dev.txt  email-classification-prompt.txt  inbox-parsing-plan.md  junit.xml  mypy.ini  plan.md  pyproject.toml  pytest.ini  repomix-output.xml  requirements-base.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  setup_project.py  test.txt
.github/workflows/: branch-check.yml  test.yml  tests.yml
autolabel/: console.py
autolabel/simplegmail/: README.md
config/: clients.yaml  company_codes.yaml  document_types.yaml  email_tags.yaml  main.py  product_categories.yaml  product_categories_v2.yaml  regulatory_actions.yaml  regulatory_actions_v3.yaml  state_patterns.yaml  state_specific.yaml  status_workflows.yaml  version_control.yaml
config/archive/: README.md
config/notes/: 1.md  2_core_logic.md  3_with_pdf_attachment_parsing.md
data/: all-active-clients.csv  delta-client-labels.csv
data/clients/: client-data-1.ipynb  client-list-all-items.csv  delta-client-labels.csv  (+1 more)
docs/: configuration-versioning.md  docs-dir-struct.md  documentation_overview.md
doctr/: quicktour.ipynb
requirements/: base.txt  dev.txt  requirements-dev.txt  test.txt
schemas/: Client List-All-Items.csv  States-all-items.csv
scripts/: check_branch.py
secrets/: secret-gmail-ai-autolabel.json
src/: __init__.py  auto_labeler.py  config.py  console.py  main.py  modules_overview.md
tests/: README.md  conftest.py
(+149 files in other folders)
