[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delta-gmail-ai-autolabel"
version = "0.1.0"
description = "AI-powered Gmail auto-labeling system"
requires-python = ">=3.9"
authors = [
    { name = "Kyle Cassidy" },
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src"]