[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]